make it compile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ set( TARGET_NAME intrlist_test )
 
 add_executable( ${TARGET_NAME} intrlist_test.c )
 
-# target_compile_options( ${TARGET_NAME} PRIVATE -std=c11 -Werror -Wall -Wextra -pedantic -g )
+target_compile_options( ${TARGET_NAME} PRIVATE -std=gnu11 -Werror -Wall -Wextra -pedantic -g )
